# gazelle-flatbuffers

./: BUILD.bazel  WORKSPACE  go.mod
language/flatbuffers/: BUILD.bazel  flatbuffers.go
pkg/language/flatbuffers/: BUILD.bazel  config.go  fileinfo.go  fix.go  generate.go  kinds.go  lang.go  package.go  resolve.go
