load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "flatbuffers",
    srcs = [
        "config.go",
        "fileinfo.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "package.go",
        "resolve.go",
    ],
    importpath = "github.com/zachary-kuhn/gazelle-flatbuffers/pkg/language/flatbuffers",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)
